--- a/char-img/pom.xml
+++ b/char-img/pom.xml
@@ -7,6 +7,21 @@
     <groupId>com.tanikawa.flink</groupId>
     <artifactId>char-img</artifactId>
     <version>1.0-SNAPSHOT</version>
-
-
+    <properties>
+        <java.version>1.8</java.version>
+    </properties>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                    <goal>repackage</goal>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
