--- a/flood_fill/pom.xml
+++ b/flood_fill/pom.xml
@@ -7,6 +7,33 @@
     <groupId>com.tanikawa.flink</groupId>
     <artifactId>flood_fill</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <properties>
+        <java.version>1.8</java.version>
+    </properties>
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.10.4</version>
+            <scope>test</scope>
+        </dependency>
 
+    </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                    <goal>repackage</goal>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
